tests/extensions/classes/valid/classObjectInitialised.wacc
begin
    class sa is
        int s
        int b
    end
    sa s = sa{1, 2}
end