tests/extensions/classes/semanticErr/emptyConstructor.wacc
begin
    class sa is
        int s
        int b
    end
    sa s = sa{}
end